--- a/playbooks/roles/server/templates/docker-compose.yml
+++ b/playbooks/roles/server/templates/docker-compose.yml
@@ -12,6 +12,7 @@ services:
 
     {% for i in [
       'links',
+      'network_mode',
       'external_links',
       'privileged',
       'command',
