--- a/playbooks/roles/vbox/defaults/main.yml
+++ b/playbooks/roles/vbox/defaults/main.yml
@@ -4,15 +4,17 @@ corpusops_rancher_vbox_stuff : 1
 corpusops_rancher_vbox_url: "http://{{corpusops_rancher_vbox_localaddr}}:8080"
 corpusops_rancher_vbox_telemetry: "true"
 corpusops_rancher_vbox_admin: "rancheradmin"
+corpusops_rancher_vbox_cfg: "/etc/rancher"
 corpusops_rancher_vbox_password: "{{
     lookup('password',
-           ('../local/pwd_rancher_admin '
+           (corpusops_rancher_vbox_cfg+'/pwd_rancher_admin '
             'length=15 chars=ascii_letters,digits')) }}"
 corpusops_rancher_vbox_api_v: "{{
     lookup('password',
-           ('../local/apiv_rancher_admin '
+           (corpusops_rancher_vbox_cfg+'/apiv_rancher_admin '
             'length=15 chars=ascii_letters,digits')) }}"
 corpusops_rancher_vbox_api_k: "{{
     lookup('password',
-           ('../local/apik_rancher_admin '
+           (corpusops_rancher_vbox_cfg+'/apik_rancher_admin '
             'length=15 chars=ascii_letters,digits')) }}"
+corpusops_rancher_vbox_bins_dir: "/srv/apps/rancher"
