--- a/playbooks/variables/vbox.yml
+++ b/playbooks/variables/vbox.yml
@@ -1,2 +1,7 @@
 ---
-corpusops_services_virt_docker_settings_DOCKER_OPTS: "-H tcp://0.0.0.0:2375 -H unix:///var/run/docker.sock"
+
+# MTU setting is really important as rancher
+# use ipsec, network will mess with the MTU
+# overhead is setted too high
+
+corpusops_services_virt_docker_settings_DOCKER_OPTS: "-H tcp://0.0.0.0:2375 -H unix:///var/run/docker.sock --mtu={{ansible_default_ipv4|cops_rancher_mtu}}"
