--- a/playbooks/roles/vbox/defaults/main.yml
+++ b/playbooks/roles/vbox/defaults/main.yml
@@ -8,7 +8,7 @@ corpusops_rancher_vbox_cfg: "/etc/rancher"
 corpusops_rancher_vbox_password: "{{
     lookup('password',
            (corpusops_rancher_vbox_cfg+'/pwd_rancher_admin '
-            'length=15 chars=ascii_letters,digits')) }}"
+            'length=15 chars=ascii_lbins_diretters,digits')) }}"
 corpusops_rancher_vbox_api_v: "{{
     lookup('password',
            (corpusops_rancher_vbox_cfg+'/apiv_rancher_admin '
@@ -18,3 +18,4 @@ corpusops_rancher_vbox_api_k: "{{
            (corpusops_rancher_vbox_cfg+'/apik_rancher_admin '
             'length=15 chars=ascii_letters,digits')) }}"
 corpusops_rancher_vbox_bins_dir: "/srv/apps/rancher"
+corpusops_rancher_vbox_rancherserver_dir: "/srv/rancher/rancherserver"
