--- a/hacking/vagrant/Vagrantfile
+++ b/hacking/vagrant/Vagrantfile
@@ -93,6 +93,8 @@ cfg = Hash.new
 cfg['PROVISION_SCRIPT'] =      "/host/#{INNER_VAGRANTFILE_DIR}/provision_pre.sh"
 cfg['POST_PROVISION_SCRIPT'] = "/host/#{INNER_VAGRANTFILE_DIR}/provision_post.sh"
 cfg['UNAME'] = `uname`.strip
+cfg['FORCE_CORPUSOPS_PLAY_PLAYBOOKS'] = ''
+cfg['SKIP_CORPUSOPS_PLAY_PLAYBOOKS'] = ''
 cfg['FORCE_CORPUSOPS_INSTALL'] = ''
 cfg['FORCE_CORPUSOPS_SYNC'] = ''
 cfg["PRIVATE_NETWORK"] = "192.168.99"
@@ -117,6 +119,7 @@ cfg['APT_PROXY'] = ''
 # MAKINA STATES CONFIGURATION
 cfg['SERIAL'] = ["disconnected"]
 cfg['HOST_MOUNTPOINT'] = "/host"
+# WARNING ONLY VARIABLES FILES ARE SUPPORTED
 cfg['ANSIBLE_VARS'] = "#{cfg['HOST_MOUNTPOINT']}/playbooks/variables/vbox.yml"
 # extra provision
 cfg['PLAYBOOKS'] = {
@@ -124,6 +127,13 @@ cfg['PLAYBOOKS'] = {
         # install docker
         "#{cfg['COPS_ROOT']}/roles/corpusops.roles/services_virt_docker/role.yml" => {
             "extra_vars" => cfg['ANSIBLE_VARS']
+            # "color" => "true" | ""
+            # "limit" => ["-l", "foobar"]
+            # "extra_args" => ["--version"]
+            # "playbook_command" => "/opt/ansible-playbook-wrapper"
+            # "verbosity" => "-vvvvvv"
+            # "inventory" => ["-i", "/where/inv"]
+            # "marker_dir" => "/etc"
         },
     }],
 }
@@ -199,14 +209,10 @@ cfg.setdefault('VIRTUALBOX_BASE_VM_NAME_PRE', "#{cfg['VM_HOST']}")
 cfg.setdefault('VIRTUALBOX_BASE_VM_NAME_POST', "#{cfg['OS']} #{cfg['OS_RELEASE']}64")
 
 def ansible_setup(ansible, cfg, *args)
-    ansible.playbook_command = "#{cfg['HOST_MOUNTPOINT']}/#{INNER_VAGRANTFILE_DIR}/sudo-ansible-playbook.sh"
-    # ansible.inventory_path = cfg['HOST_MOUNTPOINT']
-    ansible.provisioning_path = cfg['HOST_MOUNTPOINT']
-    ansible.sudo = true
-    ansible.sudo_user = 'root'
-    # ansible.become_user = 'root'
     ansible.install = false
     ansible.verbose  = true
+    ansible.playbook_command = "#{cfg['COPS_ROOT']}/bin/ansible-playbook"
+    ansible.provisioning_path = cfg['HOST_MOUNTPOINT']
     if ! args.nil?
         args.each do |arg|
             arg.each do |key, val|
@@ -246,7 +252,7 @@ Vagrant.configure("2") do |config|
        # do not use vagrant hostname plugin, it's evil
        # https://github.com/mitchellh/vagrant/blob/master/plugins/guests/debian/cap/change_host_name.rb#L22-L23
        sub.vm.hostname = nil
-	   private_ip = "#{cfg["PRIVATE_NETWORK"]}.#{machine_num+1}"
+     private_ip = "#{cfg["PRIVATE_NETWORK"]}.#{machine_num+1}"
        sub.vm.network "private_network", ip: private_ip
        sub.vm.provider "virtualbox" do |vb|
            vb.name = "#{virtualbox_vm_name}"
@@ -255,8 +261,12 @@ Vagrant.configure("2") do |config|
        if File.exist?("#{CWD}/.vagrant/machines/#{machine}/virtualbox/action_provision")
          File.delete("#{CWD}/.vagrant/machines/#{machine}/virtualbox/action_provision")
        end
+       playbooks = cfg['PLAYBOOKS'].setdefault(machine_num.to_s, cfg['PLAYBOOKS']['default'])
        provision_scripts = [
            "if [ ! -d /root/vagrant ];then mkdir /root/vagrant;fi;",
+           %{cat > /root/vagrant/playbooks.json << EOF
+#{playbooks.to_json}
+EOF},
            %{cat > /root/vagrant/provision_settings.sh  << EOF
 #
 export DNS_SERVERS="#{cfg['DNS_SERVERS']}"
@@ -274,18 +284,28 @@ export CORPUSOPS_FQDN="#{fqdn}"
 export CORPUSOPS_VB_NAME="#{virtualbox_vm_name}"
 export CORPUSOPS_AUTO_UPDATE="#{cfg['CORPUSOPS_AUTO_UPDATE']}"
 export CORPUSOPS_HOST_OS="#{cfg['UNAME']}"
-export CORPUSOPS_HOST_MOUNTPOINT="#{cfg['CORPUSOPS_HOST_MOUNTPOINT']}"
+export CORPUSOPS_HOST_MOUNTPOINT="#{cfg['HOST_MOUNTPOINT']}"
+export CORPUSOPS_PLAYBOOKS="#{cfg['HOST_MOUNTPOINT']}"
 #
 export COPS_URL="#{cfg['COPS_URL']}"
 export COPS_ROOT="#{cfg['COPS_ROOT']}"
 #
+export FORCE_CORPUSOPS_PLAY_PLAYBOOKS="#{cfg['FORCE_CORPUSOPS_PLAY_PLAYBOOKS']}"
 export FORCE_CORPUSOPS_INSTALL="#{cfg['FORCE_CORPUSOPS_INSTALL']}"
 export FORCE_CORPUSOPS_SYNC="#{cfg['FORCE_CORPUSOPS_SYNC']}"
+export SKIP_CORPUSOPS_PLAY_PLAYBOOKS="#{cfg['SKIP_CORPUSOPS_PLAY_PLAYBOOKS']}"
 export SKIP_CORPUSOPS_INSTALL="#{cfg['SKIP_CORPUSOPS_INSTALL']}"
 export SKIP_CORPUSOPS_SYNC="#{cfg['SKIP_CORPUSOPS_SYNC']}"
 export SKIP_ROOTSSHKEYS_SYNC="#{cfg['SKIP_ROOTSSHKEYS_SYNC']}"
 EOF},
-    %{cat > /root/vagrant/provision_net.sh  << EOF
+       %#cat > /tmp/ansible-dummy.yml << EOF
+---
+- hosts: all,
+  tasks:
+  - shell: |
+      rsync -azv /tmp/vagrant-ansible/ /tmp/corpusops-ansible/
+EOF#,
+           %{cat > /root/vagrant/provision_net.sh  << EOF
 #!/usr/bin/env bash
 . "/root/vagrant/provision_settings.sh" || exit 1
 echo '#{hostname}' > /etc/hostname
@@ -304,25 +324,22 @@ EOF},
            "chmod 700 /root/vagrant/provision_*.sh",
            "su -c /root/vagrant/provision_net.sh;",
            "su -l -c #{cfg['PROVISION_SCRIPT']}"]
-
        post_provision_scripts = [
            "su -l -c #{cfg['POST_PROVISION_SCRIPT']}"]
-       # pre provision shell script
+       # provision shell script
        provision_script = provision_scripts.join("\n")
        sub.vm.provision :shell, :inline => provision_script
-       # ansible setup
-       playbooks = cfg['PLAYBOOKS'].setdefault(machine_num.to_s, cfg['PLAYBOOKS']['default'])
-       playbooks.each do |playbookdef|
-            playbookdef.each do |playbook, variables|
-               sub.vm.provision "ansible_local" do |ansible|
-                  ansible.playbook = playbook
-                  ansible_setup(ansible, cfg, variables)
-               end
-            end
-       end
+       # ansible setup is only there to generate the inventory
+       # we call ansible ourselves from our provision script (POST) !
+     {'/tmp/ansible-dummy.yml' => {}}.each do |playbook, variables|
+        sub.vm.provision "ansible_local" do |ansible|
+        ansible.playbook = playbook
+        ansible_setup(ansible, cfg, variables)
+        end
+     end
        # post provision shell script
-       provision_script = post_provision_scripts.join("\n")
-       sub.vm.provision :shell, :inline => provision_script
+       post_provision_script = post_provision_scripts.join("\n")
+       sub.vm.provision :shell, :inline => post_provision_script
     end
   end
 end
@@ -336,4 +353,4 @@ Vagrant.configure("2") do |config|
     vb.customize ["modifyvm", :id, "--uartmode1"] + cfg['SERIAL']
   end
 end
-# vim: set ft=ruby:
+# vim: set ft=ruby et:
