--- a/playbooks/roles/vbox/tasks/readyness.yml
+++ b/playbooks/roles/vbox/tasks/readyness.yml
@@ -8,8 +8,10 @@
   until: corpusops_rancher_vbox_ready.status != -1
   failed_when: corpusops_rancher_vbox_ready.status == -1
   tags: [readyness]
+  no_log: "{{corpusops_rancher_vbox_vars.no_log}}"
 - include_tasks: test_auth.yml
   vars:
     api_user: "{{omit}}"
     api_pw: "{{omit}}"
   tags: [readyness]
+  no_log: "{{corpusops_rancher_vbox_vars.no_log}}"
