--- a/playbooks/variables/vbox.yml
+++ b/playbooks/variables/vbox.yml
@@ -1,7 +1,3 @@
 ---
-
-# MTU setting is really important as rancher
-# use ipsec, network will mess with the MTU
-# overhead is setted too high
-
-corpusops_services_virt_docker_settings_DOCKER_OPTS: "-H tcp://0.0.0.0:2375 -H unix:///var/run/docker.sock --mtu={{ansible_default_ipv4|cops_rancher_mtu}}"
+cops_path: "../local/corpusops.bootstrap"
+cops_vagrant: "{{cops_path}}/hacking/vagrant"
