--- a/.ansible/playbooks/vbox_rancher_cleanup.yml
+++ b/.ansible/playbooks/vbox_rancher_cleanup.yml
@@ -3,5 +3,5 @@
 - import_playbook: ./sudo.yml
 - import_playbook: ./rancher_cleanup.yml
   when: |
-    (not vbox_cops.get('SKIP_RANCHER_PROVISON', False) or
-     vbox_cops.get('FORCE_RANCHER_PROVISON', False))
+    (not vbox_cops.get('SKIP_RANCHER_CLEANUP_PROVISON', False) or
+     vbox_cops.get('FORCE_RANCHER_CLEANUP_PROVISON', False))
